--- a/src/main/res/layout/item_path_name.xml
+++ b/src/main/res/layout/item_path_name.xml
@@ -22,11 +22,20 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <item name="auth_token_loader"
-          type="id"/>
-    <item name="non_auth_token_loader"
-          type="id"/>
-    <item name="local_resources_loader"
-          type="id"/>
-</resources>
+<TextView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/path_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="5dp"
+        android:gravity="start|top"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:ellipsize="none"
+        android:textStyle="bold"
+        android:lines="1"
+        android:minLines="1"
+        android:maxLines="1"
+        android:background="?attr/sdf_buttonBackground"
+        />
