--- a/src/main/res/drawable/list_item_divider.xml
+++ b/src/main/res/drawable/list_item_divider.xml
@@ -22,11 +22,17 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <item name="auth_token_loader"
-          type="id"/>
-    <item name="non_auth_token_loader"
-          type="id"/>
-    <item name="local_resources_loader"
-          type="id"/>
-</resources>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle"
+    >
+
+    <size
+        android:width="1dp"
+        android:height="1dp"
+        />
+
+    <solid
+        android:color="@color/color_grey_600"/>
+
+</shape>
