--- a/src/main/res/layout/item_path_icon.xml
+++ b/src/main/res/layout/item_path_icon.xml
@@ -22,11 +22,12 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <item name="auth_token_loader"
-          type="id"/>
-    <item name="non_auth_token_loader"
-          type="id"/>
-    <item name="local_resources_loader"
-          type="id"/>
-</resources>
+<ImageView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/path_icon"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_gravity="center"
+        android:layout_marginRight="5dp"
+        android:background="?attr/ic_next"
+        />
