--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -101,6 +101,7 @@
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_light</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+        <item name="android:listSeparatorTextViewStyle">@style/ListSeparatorTextView</item>
     </style>
 
     <style name="Theme.NextGIS.AppCompat.Light" parent="Theme.NextGIS.AppCompat.Light.Base">
@@ -151,6 +152,7 @@
 
         <item name="DatePickSpinnerBackground">@drawable/ic_spinner_calendar_dark</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+        <item name="android:listSeparatorTextViewStyle">@style/ListSeparatorTextView</item>
     </style>
 
     <style name="Theme.NextGIS.AppCompat.Dark" parent="Theme.NextGIS.AppCompat.Dark.Base">
@@ -237,6 +239,14 @@
         <item name="android:background">?attr/DatePickSpinnerBackground</item>
     </style>
 
+    <style name="ListSeparatorTextView">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/accent</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+    </style>
+    
     <!-- StyledDialogFragment themes. These are fixed. To change the colors see colors.xml -->
     <!-- Or use StyledDialogFragment.setThemeResId() -->
 
