--- a/src/main/res/layout/dialog_select_zoom_levels.xml
+++ b/src/main/res/layout/dialog_select_zoom_levels.xml
@@ -5,7 +5,7 @@
   ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser General Public License as published by
@@ -25,7 +25,8 @@
               xmlns:custom="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:padding="20dp">
 
     <TextView
         android:id="@+id/textView"
@@ -35,12 +36,17 @@
         android:text="@string/select_zoom_levels_to_download"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-    <com.edmodo.rangebar.RangeBar
+    <com.appyvet.materialrangebar.RangeBar
         android:id="@+id/rangebar"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_margin="5dp"
-        custom:tickCount="26"/>
+        custom:mrb_pinRadius="0dp"
+        custom:mrb_rangeBarColor="@color/accent"
+        custom:mrb_rangeBarPaddingBottom="20dp"
+        custom:mrb_selectorColor="@color/primary_dark"
+        custom:mrb_selectorSize="8dp"
+        custom:mrb_tickEnd="25"
+        custom:mrb_tickStart="0"/>
 
     <LinearLayout
         android:layout_width="match_parent"
