--- a/src/main/res/values/arrays.xml
+++ b/src/main/res/values/arrays.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2018 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -199,5 +199,10 @@
         <item>@string/to_ngw</item>
         <item>@string/from_ngw</item>
         <item>@string/both_directions</item>
+    </string-array>
+    <string-array name="sizes" translatable="false">
+        <item>@string/small</item>
+        <item>@string/medium</item>
+        <item>@string/big</item>
     </string-array>
 </resources>
