--- a/src/main/res/layout/style_text.xml
+++ b/src/main/res/layout/style_text.xml
@@ -110,5 +110,33 @@
             android:layout_height="wrap_content"
             android:entries="@array/alignment"
             android:padding="5dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/text_color"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+        <LinearLayout
+            android:id="@+id/color_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/color_text_ring"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/color_ring"/>
+
+            <TextView
+                android:id="@+id/color_text_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
