--- a/src/main/res/layout/fragment_ngw_vector_layer_sync.xml
+++ b/src/main/res/layout/fragment_ngw_vector_layer_sync.xml
@@ -118,7 +118,8 @@
         android:layout_height="match_parent"
         android:background="@color/color_half"
         android:clickable="true"
-        android:focusable="true">
+        android:focusable="true"
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/locked"
