--- a/src/main/res/layout/formtemplate_distance.xml
+++ b/src/main/res/layout/formtemplate_distance.xml
@@ -4,7 +4,7 @@
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2018 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2018-2019 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -41,5 +41,6 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/update_coordinates"/>
+        android:text="@string/update_coordinates"
+        android:textColor="@color/color_white"/>
 </com.nextgis.maplibui.formcontrol.Distance>
