Embed tabs scroll in parent

--- a/src/main/res/layout/formtemplate_tabs.xml
+++ b/src/main/res/layout/formtemplate_tabs.xml
@@ -24,12 +24,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabGravity="fill"
         app:tabMaxWidth="0dp"
-        app:tabMode="fixed"/>
+        app:tabMode="scrollable"/>
+
+    <FrameLayout
+        android:id="@+id/tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </com.nextgis.maplibui.formcontrol.Tabs>
