Update login strings for NGID and NGW

--- a/src/main/res/layout/fragment_ngid_login.xml
+++ b/src/main/res/layout/fragment_ngid_login.xml
@@ -41,7 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:src="@drawable/ngm_logo_shadow" />
+            android:src="@drawable/ngm_logo_shadow"
+            tools:ignore="ContentDescription" />
 
         <View
             android:layout_width="0dp"
@@ -82,9 +83,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
+            android:autofillHints="emailAddress"
             android:ems="10"
             android:gravity="center"
-            android:hint="@string/user_name"
+            android:hint="@string/user_name_ngid"
             android:inputType="textPersonName" />
     </android.support.design.widget.TextInputLayout>
 
@@ -99,6 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
+            android:autofillHints="password"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/password"
