--- a/src/main/res/layout/fragment_ngw_login.xml
+++ b/src/main/res/layout/fragment_ngw_login.xml
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Project:  NextGIS Mobile
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2015-2016, 2020 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -23,10 +22,10 @@
   -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context="com.nextgis.maplibui.fragment.NGWLoginFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.nextgis.maplibui.fragment.NGWLoginFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,10 +37,10 @@
             android:layout_height="wrap_content"
             android:padding="16dp">
 
-            <FrameLayout
+            <View
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"/>
+                android:layout_weight="2" />
 
             <ImageView
                 android:layout_width="0dp"
@@ -49,12 +48,13 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:src="@drawable/ic_ngw"/>
+                android:src="@drawable/ic_ngw"
+                tools:ignore="ContentDescription" />
 
-            <FrameLayout
+            <View
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"/>
+                android:layout_weight="2" />
         </LinearLayout>
 
         <TextView
@@ -64,7 +64,7 @@
             android:layout_margin="5dp"
             android:autoLink="web"
             android:text="@string/ngw_from_my_nextgis"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
             android:id="@+id/url"
@@ -75,27 +75,31 @@
             android:drawableEnd="@drawable/nextgis_addition"
             android:drawableRight="@drawable/nextgis_addition"
             android:hint="@string/instance_name"
-            android:inputType="textUri"/>
+            android:importantForAutofill="no"
+            android:inputType="textUri" />
 
         <EditText
             android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:autofillHints="username"
             android:ems="10"
-            android:hint="@string/user_name"
-            android:inputType="textPersonName"/>
+            android:hint="@string/user_name_ngw"
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:autofillHints="password"
             android:ems="10"
             android:hint="@string/password"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword" />
 
         <LinearLayout
+            style="?android:attr/buttonBarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -103,6 +107,7 @@
 
             <Button
                 android:id="@+id/guest"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="42dp"
                 android:layout_gravity="center_horizontal"
@@ -110,10 +115,11 @@
                 android:layout_weight="1"
                 android:background="@drawable/light_button"
                 android:text="@string/guest"
-                android:textColor="@color/primary_dark"/>
+                android:textColor="@color/primary_dark" />
 
             <Button
                 android:id="@+id/signin"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="42dp"
                 android:layout_gravity="center_horizontal"
@@ -121,7 +127,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/dark_button"
                 android:text="@string/login"
-                android:textColor="@color/color_white"/>
+                android:textColor="@color/color_white" />
         </LinearLayout>
 
         <LinearLayout
@@ -135,14 +141,14 @@
                 android:id="@+id/tip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/manual_tip"/>
+                android:text="@string/manual_tip" />
 
             <TextView
                 android:id="@+id/manual"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/click_here"/>
+                android:text="@string/click_here" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
